Initial commit: nostr-telegram-bridge v0.1 mit NIP-17

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
 # Telegram-Konfiguration
-# Bot-Token vom BotFather
-TELEGRAM_BOT_TOKEN=
-# Telegram Gruppen-ID (z.B. -1001234567890)
-TELEGRAM_GROUP_ID=
+TELEGRAM_BOT_TOKEN=xxxxx
+TELEGRAM_GROUP_ID=xxxxx
 
 # Nostr-Konfiguration
-# Nostr Private Key (nsec...)
-NOSTR_PRIVATE_KEY=
-# Nostr Empfänger-Pubkey (npub...)
-NOSTR_PUBLIK_KEY=
+NOSTR_PRIVATE_KEY=nsecxxx
+NOSTR_PUBLIC_KEY=npubxxxxx
+NOSTR_RELAYS=wss://relay.damus.io,wss://nos.lol,wss://relay.snort.social
 
-# Relay-Konfiguration (Komma-separiert)
-NOSTR_RELAYS=
+# Verschlüsselungstyp: nip04, nip17, public
+# Standard: nip17
+ENCRYPTION_TYPE=nip17
